<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/stream_actv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="fill_parent"
            android:hint="@string/stream_txt"
            android:maxLines="1"
            android:visibility="visible" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="visible" />

        <AutoCompleteTextView
            android:id="@+id/topic_actv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.22"
            android:dropDownWidth="fill_parent"
            android:hint="@string/subject"
            android:maxLines="1" />

        <ImageView
            android:id="@+id/togglePrivateStream_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/stream_private_content_desp"
            android:padding="3dp"
            android:src="@drawable/ic_action_person" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:contentDescription="@string/camera_content_desp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            android:paddingTop="4dp"
            android:src="@drawable/ic_add_circle_outline_black_24dp" />

        <AutoCompleteTextView
            android:id="@+id/message_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/tap_message"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="4"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:contentDescription="@string/send_content_desp"
            android:padding="4dp"
            android:src="@drawable/ic_send_24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/composeStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            style="@style/AppTheme.DayNight"
            android:layout_width="15dp"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/sending_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/sending_message"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp" />
    </LinearLayout>


</merge>
