...
        <FrameLayout
            android:id="@+id/list_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_behavior="com.zulip.android.util.RemoveViewsOnScroll">

            <include
...
            android:visibility="gone">

            <include layout="@layout/chatbox" />
        </com.zulip.android.util.SwipeRemoveLinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/margin_fab"
            android:src="@drawable/ic_mode_edit_24dp"
            app:backgroundTint="@color/colorPrimary"
...
