...
            android:id="@+id/sep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" &#x276f; " />

        <TextView
            android:id="@+id/instance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
...
            android:text="Sender &lt;alice@example.com>"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="0dp"
...
