<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/listBackground"
        android:clipToPadding="false"
        android:fadeScrollbars="false"
        android:paddingBottom="120dp"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/emptyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/empty_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>
